<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_post"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_cv_backdrop_path"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:scaleType="centerCrop" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_cv_rating"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="#FF0068" />

                <TextView
                    android:id="@+id/tv_cv_rating"
                    style="@style/cv_TextMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:lines="1"
                    android:text="8,5"
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_cv_title"
                style="@style/cv_TextMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_cv_backdrop_path"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/cv_title" />

            <TextView
                android:id="@+id/tv_cv_tagline"
                style="@style/cv_TextSubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_cv_title"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/cv_about_movie" />

            <TextView
                android:id="@+id/tv_cv_data"
                style="@style/cv_TextMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_cv_tagline"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:maxLength="4"
                android:text="@string/cv_year" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
