<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_full_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FullViewActivity">

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar_full_view"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="visible" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="invisible">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_vl_backdrop_path"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:visibility="invisible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/list_item_full_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end|top"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tv_vl_title"
                    style="@style/vl_TextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="4dp" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|top">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_vl_rating"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end|top"
                        android:src="#FF0068" />

                    <TextView
                        android:id="@+id/tv_vl_rating"
                        style="@style/vl_TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white" />

                </FrameLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/tv_vl_tagline"
                style="@style/vl_TextSubText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_vl_overview"
                style="@style/vl_TextOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_vl_genres"
                style="@style/vl_TextMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/vl_genres" />

            <TextView
                android:id="@+id/tv_vl_genres_data"
                style="@style/vl_TextSubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_vl_production_countries"
                style="@style/vl_TextMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:text="@string/vl_countries" />

            <TextView
                android:id="@+id/tv_vl_production_countries_data"
                style="@style/vl_TextSubText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/go_to_homepage"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@color/buttonColor"
                android:text="@string/vl_button_go_to_homepage"
                android:textColor="@android:color/white"
                android:visibility="gone" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
